# linkcast

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
linkcast/: __main__.py  audio.py  config.py  extract.py  summarize.py  tts.py
